# gandalf

./: .dockerignore  .gitignore  CLAUDE.MD  Dockerfile  README.md  gunicorn.conf.py  plan.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release-docker.yml
docs/: csr_and_storage_architecture_analysis.md  predicate_handling.md  qlever_backend_plan.md
gandalf/: __init__.py  annotate.py  biolink.py  compression.py  config.py  convert_graph.py  diagnostics.py  enrichment.py  graph.py  heartbeat.py  kgx_input.py  lmdb_store.py  loader.py  logging_config.py  main.py  models.py  node_store.py  normalize.py  openapi-config.yaml  openapi.py  otel.py  profiler.py  query_planner.py  request_validation.py  server.py  validation.py
gandalf/backends/: base.py  (+3 more)
mithrandir/: README.md  app.js  index.html  server.py  style.css  test_harness.mjs
scripts/: build_graph.py  build_graph_mongo.py  build_pair_intersections.py  build_pub_counts.py  build_publications_index.py  comparison.py  diagnose.py  gandalf_notebook.ipynb  ingest_kgx.sh  ingest_pub_counts.py  plater_ingest.py  query_paths.py  retriever_request.txt  retriever_test.py
stress_tests/: README.md  locustfile.py
tests/: __init__.py  conftest.py  search_fixtures.py  test_annotate_response.py  test_attribute_constraints.py  test_backend_loading.py  test_compression.py  test_edge_node_references.py  test_enrichment.py  test_graph_neighbors.py  test_kgx_input.py  test_literature_cooccurrence_annotator.py  test_loader.py  test_lookup_basic.py  test_lookup_response.py  test_models.py  test_node_binding_grouping.py  test_node_degree.py  test_node_filter_registry.py  test_node_filters.py  test_non_canonical_predicate_with_subclass.py  test_normalize_query_graph.py  test_otel_traceparent.py  test_pair_intersections.py  test_plugin_registration.py  test_profiler.py  test_property_store_batch.py  test_pub_counts.py  test_publications.py  test_qlever_build.py  test_qlever_runtime.py  test_qualifiers.py  test_query_parameters.py  test_query_planner.py  test_related_to.py  test_response_annotator_registry.py  test_sanity.py  test_set_interpretation.py  test_sources.py  test_subclass.py  (+3 more)
(+44 files in other folders)
