[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gandalf-csr"
version = "0.2.2"
description = "Fast path finding in large knowledge graphs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Max Wang", email = "max@covar.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bmt>=1.4.6",
    "lmdb>=1.4.0",
    "msgpack>=1.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0.12"
]
server = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "orjson>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
gandalf-build = "scripts.build_graph:main"
gandalf-query = "scripts.query_paths:main"
gandalf-diagnose = "scripts.diagnose:main"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
